fix: latex fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -116,7 +116,7 @@ Post-processing occurs after the model has been trained and has generated predic
 
 Implementing these techniques requires a deep understanding of the specific fairness challenges in the data and models, as well as ongoing evaluation to ensure that AI adheres to ethical standards and promotes fairness.
 
-\subection{Pre-processing Techniques for Addressing Fairness in AI}
+\subsection{Pre-processing Techniques for Addressing Fairness in AI}
 
 Pre-processing plays a vital role in mitigating fairness issues within AI systems by preparing the data before it is utilized to train a model. The objective is to ensure that the data is unbiased, representative, and equitable across different demographic groups. Various techniques can be employed during pre-processing to promote fairness:
 
