fix: latex code fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -152,7 +152,7 @@ Creating synthetic data that accurately represents underrepresented groups can h
 
 These pre-processing techniques are essential steps in the AI development pipeline to ensure that the subsequent models are fair, unbiased, and capable of providing equitable outcomes across various demographic categories.
 
-\subection{In-processing Techniques for Addressing Fairness in AI}
+\subsection{In-processing Techniques for Addressing Fairness in AI}
 
 In-processing techniques aim to mitigate fairness issues directly during the model training phase, influencing the learning process to ensure fairness in model predictions. These approaches target bias reduction and fairness promotion within the model's decision-making process. Several techniques can be employed during model training to achieve fairness:
 
@@ -188,7 +188,7 @@ Fair adversarial training extends adversarial training to explicitly reduce disp
 
 These in-processing techniques are vital tools in promoting fairness within AI models. Integrating them appropriately during model training can significantly contribute to reducing biases and achieving equitable outcomes across various demographic categories.
 
-\subection{Post-processing Techniques for Addressing Fairness in AI}
+\subsection{Post-processing Techniques for Addressing Fairness in AI}
 
 Post-processing techniques are applied after the model has been trained and predictions have been generated. Their purpose is to rectify any biases or disparities in the model's outputs and ensure fairness in the final outcomes. Several techniques can be employed during post-processing to promote fairness:
 
